spacing issues

--- a/public/css/taps.css
+++ b/public/css/taps.css
@@ -73,6 +73,6 @@ hr{
     border-bottom: 1px solid grey;
 }
 
-h3.site-message{
+h2.site-message{
   padding-top:35px;
 }
